# smart-Sustainable-management

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_COMPLETE.md  AUTOMATIC_DEPLOYMENT_SETUP.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_AUDIT.txt  COMMIT_MESSAGE_AUTH_HARDENING.txt  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  FILE_CHANGES.md  FINAL_CHECK.md  FIXED_DEPLOYMENT.md  GITHUB_SECRETS_SETUP.md  HACKATHON_DEPLOYMENT.txt  HACKATHON_FREEZE.md  HUMAN_QUALITY_AUDIT.md  LICENSE  LOCALHOST_GUIDE.md  LOCAL_DEV_GUIDE.md  MVP_COMPLETE.md  NETLIFY_DEPLOY.md  PRESENTATION_SUMMARY.md  PRE_LAUNCH_VERIFICATION.md  PRODUCTION_AUTH_HARDENED.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAILWAY_DEPLOY.md  README.md  REFACTORING_SUMMARY.md  RENDER_DEPLOY.md  SETUP_CHECKLIST.md  SETUP_COMPLETE.md  SETUP_INSTRUCTIONS.md  START_HERE.md  (+33 more)
.github/: pull_request_template.md
.orchids/: orchids.json
apps/api/: .dockerignore  .env.example  ALEMBIC_FIXES_SUMMARY.md  ALEMBIC_GUIDE.md  ALEMBIC_QUICKREF.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.dev  README.md  RENDER_FIX.md  alembic.ini  clear_users.py  deploy.py  pyproject.toml  quick_verify.py  render.yaml  requirements.txt  start.sh  test_auth_invariants.py  test_auth_production.py  test_clip.py  verify_enum_integrity.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_fix_enum_values.py  b2c3d4e5f6g7_backfill_null_defaults.py  fix_enum_values.py
apps/api/src/: __init__.py  main.py
apps/api/src/api/: __init__.py  deps.py
apps/api/src/api/routes/: __init__.py  admin.py  auth.py  pickup.py  rewards.py  waste.py
apps/api/src/core/: __init__.py  audit.py  cache.py  circuit_breaker.py  config.py  events.py  logging.py  middleware.py  redis_rate_limiter.py  security.py  telemetry.py  token_blocklist.py
apps/api/src/core/database/: __init__.py  base.py  session.py
apps/api/src/ml/: __init__.py  base.py  pipeline.py
apps/api/src/ml/classifiers/: __init__.py  clip_classifier.py  mobilenet_classifier.py  mock_classifier.py
apps/api/src/models/: __init__.py  analytics.py  pickup.py  rewards.py  user.py  waste.py
apps/api/src/schemas/: __init__.py  analytics.py  common.py  pickup.py  rewards.py  user.py  waste.py
apps/api/src/services/: __init__.py  auth_service.py  pickup_service.py  rewards_service.py  storage_service.py  waste_service.py
apps/api/tests/: conftest.py  test_admin.py  test_auth.py  test_health.py  test_pickups.py  test_rewards.py  test_waste.py
backend/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  migrate_db.py  migration_add_hashed_password.sql  requirements.txt  start.ps1  start.sh  test_signup.py
frontend/: .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
k8s/: deployment.yaml
scripts/: init-db.sql  seed_db.py  verify-deployment.ps1  (+1 more)
(+189 files in other folders)
